# ada4cmake

./: .gitignore  Ada_CMake_Project.gpr  CMakeAda.cmake  README.md
example/: CMakeLists.txt  adabintest.gpr  adalibtest.gpr  bin_test.adb  lib_test.adb  lib_test.ads  main.c
